--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,15 +39,27 @@ sqlx = { version = "0.7.2", features = [
 ], optional = true }
 thiserror = "1.0.38"
 tokio = { version = "1.25.0", features = ["full"], optional = true }
-tower = { version = "0.4.13", optional = true }
-tower-http = { version = "0.4", features = ["fs"], optional = true }
-tracing = { version = "0.1.37", optional = true }
+tower = { version = "0.4.13", optional = true, features=["tracing"] }
+tower-http = { version = "0.4", features = ["fs", "compression-gzip", "trace"], optional = true }
+
 wasm-bindgen = "=0.2.87"
 
 dotenvy = { version="0.15.7", optional=true }
 sea-query = { version = "0.30.2", features = ["backend-sqlite", "derive", "sea-query-derive"], optional=true }
 sea-query-binder = { version = "0.5.0", features = ["sqlx", "serde_json", "with-chrono", "sqlx-sqlite"], optional=true }
 strum = { version = "0.25.0", features = ["derive"] }
+serde_qs = { version = "0.12.0", features = ["axum"] }
+
+tracing = { version = "0.1.37" }
+tracing-futures = { version = "0.2.5", optional = true }
+tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"], optional = true }
+tracing-bunyan-formatter = { version = "0.3.7", optional = true }
+tracing-log = { version = "0.1.3", optional = true }
+tracing-logfmt = { version = "0.3.2", optional = true }
+
+[dev-dependencies]
+axum-test = "13.1.1"
+pretty_assertions = "1.4.0"
 
 
 [features]
@@ -70,6 +82,11 @@ ssr = [
 	"leptos_meta/ssr",
 	"leptos_router/ssr",
 	"dep:leptos_axum",
+	"dep:tracing-futures",
+	"dep:tracing-subscriber",
+	"dep:tracing-bunyan-formatter",
+	"dep:tracing-log",
+	"dep:tracing-logfmt",
 ]
 
 [package.metadata.cargo-all-features]
