--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 anyhow = "1.0.66"
-async-trait = { version = "0.1.64", optional = true }
+async-trait = { version = "0.1.64" }
 axum = { version = "0.6.4", optional = true, features=["macros"] }
 axum_session_auth = { version = "0.7.0", features = [
 	"sqlite-rustls",
@@ -56,6 +56,8 @@ tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"]
 tracing-bunyan-formatter = { version = "0.3.7", optional = true }
 tracing-log = { version = "0.1.3", optional = true }
 tracing-logfmt = { version = "0.3.2", optional = true }
+leptos-struct-table = { version = "0.6.0", features = ["chrono"] }
+leptos-use = { version = "0.8.1", features = ["ssr", "storage", "serde", "serde_json"] }
 
 [dev-dependencies]
 axum-test = "13.1.1"
@@ -71,7 +73,7 @@ ssr = [
 	"dep:tokio",
 	"dep:axum_session_auth",
 	"dep:axum_session",
-	"dep:async-trait",
+	#"dep:async-trait",
 	"dep:bcrypt",
 	"dep:rand",
 	"dep:sqlx",
@@ -113,7 +115,8 @@ site-root = "target/site"
 site-pkg-dir = "pkg"
 
 # [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
-style-file = "style/main.scss"
+style-file = "style/tailwind.css"
+tailwind-input-file = "style/tailwind.css"
 # Assets source dir. All files found here will be copied and synchronized to site-root.
 # The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
 #
