--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,107 +1,11 @@
 [package]
 name = "roadiebag"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
-
-[lib]
-crate-type = ["cdylib", "rlib"]
-
-[dependencies]
-anyhow = "1.0.66"
-async-trait = { version = "0.1.64" }
-axum = { version = "0.6.4", optional = true, features=["macros"] }
-axum_session_auth = { version = "0.7.0", features = [
-	"sqlite-rustls",
-], optional = true }
-axum_session = { version = "0.7.0", features = [
-	"sqlite-rustls",
-], optional = true }
-bcrypt = { version = "0.14", optional = true }
-chrono = { version="0.4.31", features=["serde"]}
-console_error_panic_hook = "0.1"
-console_log = "1"
-cfg-if = "1"
-futures = "0.3.25"
-http = "0.2.8"
-leptos = { version = "0.5", features = ["nightly"] }
-leptos_axum = { version = "0.5", optional = true }
-leptos_meta = { version = "0.5", features = ["nightly"] }
-leptos_router = { version = "0.5", features = ["nightly"] }
-log = "0.4.17"
-rand = { version = "0.8.5", features = ["min_const_gen"], optional = true }
-simple_logger = "4"
-serde = { version = "1.0.148", features = ["derive"] }
-sqlx = { version = "0.7.2", features = [
-	"runtime-tokio-rustls",
-	"sqlite",
-	"time",
-	"chrono"
-], optional = true }
-thiserror = "1.0.38"
-tokio = { version = "1.25.0", features = ["full"], optional = true }
-tower = { version = "0.4.13", optional = true, features=["tracing"] }
-tower-http = { version = "0.4", features = ["fs", "compression-gzip", "trace"], optional = true }
-
-wasm-bindgen = "=0.2.87"
-
-dotenvy = { version="0.15.7", optional=true }
-sea-query = { version = "0.30.2", features = ["backend-sqlite", "derive", "sea-query-derive"], optional=true }
-sea-query-binder = { version = "0.5.0", features = ["sqlx", "serde_json", "with-chrono", "sqlx-sqlite"], optional=true }
-strum = { version = "0.25.0", features = ["derive"] }
-serde_qs = { version = "0.12.0", features = ["axum"] }
-
-tracing = { version = "0.1.37" }
-tracing-futures = { version = "0.2.5", optional = true }
-tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"], optional = true }
-tracing-bunyan-formatter = { version = "0.3.7", optional = true }
-tracing-log = { version = "0.1.3", optional = true }
-tracing-logfmt = { version = "0.3.2", optional = true }
-leptos-struct-table = { version = "0.6.0", features = ["chrono"] }
-leptos-use = { version = "0.8.1", features = ["ssr", "storage", "serde", "serde_json"] }
-
-[dev-dependencies]
-axum-test = "13.1.1"
-pretty_assertions = "1.4.0"
-
-
-[features]
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
-ssr = [
-	"dep:axum",
-	"dep:tower",
-	"dep:tower-http",
-	"dep:tokio",
-	"dep:axum_session_auth",
-	"dep:axum_session",
-	#"dep:async-trait",
-	"dep:bcrypt",
-	"dep:rand",
-	"dep:sqlx",
-	"dep:sea-query",
-	"dep:dotenvy",
-	"dep:sea-query-binder",
-	"leptos/ssr",
-	"leptos_meta/ssr",
-	"leptos_router/ssr",
-	"dep:leptos_axum",
-	"dep:tracing-futures",
-	"dep:tracing-subscriber",
-	"dep:tracing-bunyan-formatter",
-	"dep:tracing-log",
-	"dep:tracing-logfmt",
-]
 
 [package.metadata.cargo-all-features]
 denylist = ["axum", "tower", "tower-http", "tokio", "sqlx", "leptos_axum"]
 skip_feature_sets = [["ssr", "hydrate"]]
-
-# Defines a size-optimized profile for the WASM bundle in release mode
-[profile.wasm-release]
-inherits = "release"
-opt-level = 'z'
-lto = true
-codegen-units = 1
-panic = "abort"
 
 [package.metadata.leptos]
 # The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
@@ -168,3 +72,99 @@ lib-default-features = false
 #
 # Optional. Defaults to "release".
 lib-profile-release = "wasm-release"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
+
+[dependencies]
+anyhow = "1.0.66"
+async-trait = { version = "0.1.64" }
+axum = { version = "0.6.4", optional = true, features=["macros"] }
+axum_session_auth = { version = "0.7.0", features = [
+	"sqlite-rustls",
+], optional = true }
+axum_session = { version = "0.7.0", features = [
+	"sqlite-rustls",
+], optional = true }
+bcrypt = { version = "0.14", optional = true }
+chrono = { version="0.4.31", features=["serde"]}
+console_error_panic_hook = "0.1"
+console_log = "1"
+cfg-if = "1"
+futures = "0.3.25"
+http = "0.2.8"
+leptos = { version = "0.5", features = ["nightly"] }
+leptos_axum = { version = "0.5", optional = true }
+leptos_meta = { version = "0.5", features = ["nightly"] }
+leptos_router = { version = "0.5", features = ["nightly"] }
+log = "0.4.17"
+rand = { version = "0.8.5", features = ["min_const_gen"], optional = true }
+simple_logger = "4"
+serde = { version = "1.0.148", features = ["derive"] }
+sqlx = { version = "0.7.2", features = [
+	"runtime-tokio-rustls",
+	"sqlite",
+	"time",
+	"chrono"
+], optional = true }
+thiserror = "1.0.38"
+tokio = { version = "1.25.0", features = ["full"], optional = true }
+tower = { version = "0.4.13", optional = true, features=["tracing"] }
+tower-http = { version = "0.4", features = ["fs", "compression-gzip", "trace"], optional = true }
+
+wasm-bindgen = "=0.2.88"
+
+dotenvy = { version="0.15.7", optional=true }
+sea-query = { version = "0.30.2", features = ["backend-sqlite", "derive", "sea-query-derive"], optional=true }
+sea-query-binder = { version = "0.5.0", features = ["sqlx", "serde_json", "with-chrono", "sqlx-sqlite"], optional=true }
+strum = { version = "0.25.0", features = ["derive"] }
+serde_qs = { version = "0.12.0", features = ["axum"] }
+
+tracing = { version = "0.1.37" }
+tracing-futures = { version = "0.2.5", optional = true }
+tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"], optional = true }
+tracing-bunyan-formatter = { version = "0.3.7", optional = true }
+tracing-log = { version = "0.1.3", optional = true }
+tracing-logfmt = { version = "0.3.2", optional = true }
+leptos-struct-table = { path="/opt/dev/projects/leptos-struct-table/leptos-struct-table", features = ["chrono"] }
+leptos-use = { version = "0.8.1", features = ["ssr", "storage", "serde", "serde_json"] }
+
+[dev-dependencies]
+axum-test = "13.1.1"
+pretty_assertions = "1.4.0"
+
+
+[features]
+hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
+ssr = [
+	"dep:axum",
+	"dep:tower",
+	"dep:tower-http",
+	"dep:tokio",
+	"dep:axum_session_auth",
+	"dep:axum_session",
+	#"dep:async-trait",
+	"dep:bcrypt",
+	"dep:rand",
+	"dep:sqlx",
+	"dep:sea-query",
+	"dep:dotenvy",
+	"dep:sea-query-binder",
+	"leptos/ssr",
+	"leptos_meta/ssr",
+	"leptos_router/ssr",
+	"dep:leptos_axum",
+	"dep:tracing-futures",
+	"dep:tracing-subscriber",
+	"dep:tracing-bunyan-formatter",
+	"dep:tracing-log",
+	"dep:tracing-logfmt",
+]
+
+# Defines a size-optimized profile for the WASM bundle in release mode
+[profile.wasm-release]
+inherits = "release"
+opt-level = 'z'
+lto = true
+codegen-units = 1
+panic = "abort"
